Updated git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,7 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+
+/Assets/Plugins/Sirenix/Odin Inspector/Config/Editor/InspectorConfig.asset
+/Assets/Plugins/Sirenix/Odin Inspector/Config/Editor/InspectorConfig.asset.meta
